[gd_scene load_steps=8 format=3 uid="uid://dupml8hcjbwpn"]

[ext_resource type="Script" uid="uid://caee7vtcn0oy6" path="res://scripts/inventory.gd" id="1_ty45s"]
[ext_resource type="Shader" uid="uid://wcc1hq41v3pw" path="res://images/pause_menu.gdshader" id="2_53g1v"]
[ext_resource type="Script" uid="uid://c7hkrtvpcrl44" path="res://scripts/dice_one_2.gd" id="3_yyk2a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1ji4w"]
shader = ExtResource("2_53g1v")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_7l7mv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5d2l8"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.886000042085]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v4r4p"]
_data = {
&"RESET": SubResource("Animation_7l7mv"),
&"blur": SubResource("Animation_5d2l8")
}

[node name="Inventory" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_left = 576.0
offset_top = 324.0
offset_right = 576.0
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ty45s")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_1ji4w")
layout_mode = 0
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 324.0

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -196.0
offset_right = 384.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dices" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="GroupOne" type="VBoxContainer" parent="PanelContainer/Dices"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DiceOne" type="TextureButton" parent="PanelContainer/Dices/GroupOne"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_yyk2a")
tween_intensity = 1.5
tween_duration = 0.3

[node name="DiceTwo" type="TextureButton" parent="PanelContainer/Dices/GroupOne"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_yyk2a")
tween_intensity = 1.5
tween_duration = 0.3

[node name="GroupTwo" type="VBoxContainer" parent="PanelContainer/Dices"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DiceThree" type="TextureButton" parent="PanelContainer/Dices/GroupTwo"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_yyk2a")
tween_intensity = 1.5
tween_duration = 0.3

[node name="DiceFour" type="TextureButton" parent="PanelContainer/Dices/GroupTwo"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_yyk2a")
tween_intensity = 1.5
tween_duration = 0.3

[node name="GroupThree" type="VBoxContainer" parent="PanelContainer/Dices"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DiceFive" type="TextureButton" parent="PanelContainer/Dices/GroupThree"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_yyk2a")
tween_intensity = 1.5
tween_duration = 0.3

[node name="DiceSix" type="TextureButton" parent="PanelContainer/Dices/GroupThree"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_yyk2a")
tween_intensity = 1.5
tween_duration = 0.3

[node name="GroupFour" type="VBoxContainer" parent="PanelContainer/Dices"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DiceSeven" type="TextureButton" parent="PanelContainer/Dices/GroupFour"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_yyk2a")
tween_intensity = 1.5
tween_duration = 0.3

[node name="DiceEight" type="TextureButton" parent="PanelContainer/Dices/GroupFour"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_yyk2a")
tween_intensity = 1.5
tween_duration = 0.3

[node name="GroupFive" type="VBoxContainer" parent="PanelContainer/Dices"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DiceNine" type="TextureButton" parent="PanelContainer/Dices/GroupFive"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_yyk2a")
tween_intensity = 1.5
tween_duration = 0.3

[node name="DiceTen" type="TextureButton" parent="PanelContainer/Dices/GroupFive"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_yyk2a")
tween_intensity = 1.5
tween_duration = 0.3

[node name="GroupSix" type="VBoxContainer" parent="PanelContainer/Dices"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DiceEleven" type="TextureButton" parent="PanelContainer/Dices/GroupSix"]
layout_mode = 2
size_flags_vertical = 3
toggle_mode = true
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("3_yyk2a")
tween_intensity = 1.5
tween_duration = 0.3

[node name="InvisibleButton" type="Button" parent="PanelContainer/Dices/GroupSix"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 2
mouse_filter = 2
mouse_behavior_recursive = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v4r4p")
}

[connection signal="pressed" from="PanelContainer/Dices/GroupOne/DiceOne" to="." method="_on_dice_one_pressed"]
[connection signal="pressed" from="PanelContainer/Dices/GroupOne/DiceTwo" to="." method="_on_dice_two_pressed"]
[connection signal="pressed" from="PanelContainer/Dices/GroupTwo/DiceThree" to="." method="_on_dice_three_pressed"]
[connection signal="pressed" from="PanelContainer/Dices/GroupTwo/DiceFour" to="." method="_on_dice_four_pressed"]
[connection signal="pressed" from="PanelContainer/Dices/GroupThree/DiceFive" to="." method="_on_dice_five_pressed"]
[connection signal="pressed" from="PanelContainer/Dices/GroupThree/DiceSix" to="." method="_on_dice_six_pressed"]
[connection signal="pressed" from="PanelContainer/Dices/GroupFour/DiceSeven" to="." method="_on_dice_seven_pressed"]
[connection signal="pressed" from="PanelContainer/Dices/GroupFour/DiceEight" to="." method="_on_dice_eight_pressed"]
[connection signal="pressed" from="PanelContainer/Dices/GroupFive/DiceNine" to="." method="_on_dice_nine_pressed"]
[connection signal="pressed" from="PanelContainer/Dices/GroupFive/DiceTen" to="." method="_on_dice_ten_pressed"]
[connection signal="pressed" from="PanelContainer/Dices/GroupSix/DiceEleven" to="." method="_on_dice_eleven_pressed"]
